--- a/jeecg-boot/pom.xml
+++ b/jeecg-boot/pom.xml
@@ -6,9 +6,9 @@
   <packaging>pom</packaging>
   
   	<parent>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-parent</artifactId>
-	    <version>2.3.5.RELEASE</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.3.5.RELEASE</version>
 	    <relativePath/>
 	</parent>
 
@@ -121,6 +121,12 @@
                 <version>${spring-cloud-alibaba.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>2.3.7.RELEASE</version>
 			</dependency>
 
 			<!-- system 模块-->
